cabal-version:      2.4
name:               debruijn
version:            0.1.0.0

executable debruijn
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Tree, Parser, Interp

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, parsec
    hs-source-dirs:   src
    default-language: Haskell2010
