cabal-version:      2.4
name:               hm
version:            0.1.0.0

executable hm
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Typer, Tree, Parser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, containers, mtl, parsec
    hs-source-dirs:   src
    default-language: Haskell2010
