cabal-version:      2.4
name:               systemf
version:            0.1.0.0

executable systemf
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules: Tree, Typer, Parser

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base, containers, parsec
  hs-source-dirs:   src
  default-language: Haskell2010
